--- a/src/Components/Card/card.css
+++ b/src/Components/Card/card.css
@@ -8,11 +8,12 @@
     border-radius: 0.7em;
     flex-direction: column;
     background-color: var(--blue);
-    box-shadow:6px 7px 5px -4px rgba(34, 35, 38, 0.13), -6px 7px 25px -5px rgba(40, 38, 39, 0.37);
+    box-shadow:6px 7px 5px -4px rgba(34, 35, 38, 0.13),
+     -6px 7px 25px -5px rgba(40, 38, 39, 0.37);
 }
 .card-text{
-    width: 15em;
-    height: 12%;
+    width: 95%;
+    height: 20%;
     display: flex;
     margin: 0.2em;
     padding: 0.5em;
@@ -23,10 +24,10 @@
 }
 .card-text > p{
     cursor: pointer;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-style: normal;
     text-align: center;
-    white-space: nowrap;
+    white-space: wrap;
     color: var(--white);
     font-family: var(--Roboto);
 }
@@ -42,6 +43,7 @@
     cursor: default;
     font-size: 1.6rem;
     font-weight: bolder;
+    white-space: nowrap;
     color: var(--white);
     font-family: var(--Roboto);
 }
@@ -100,10 +102,7 @@
         width: 95%;
         height: 85%;    
     }
-    .card-text{
-        width: 80%;
-        height: 10%;
-    }
+
     .card-text > p{
         font-size: 0.8rem;
     }
