--- a/src/Components/Button/button.css
+++ b/src/Components/Button/button.css
@@ -1,23 +1,33 @@
-.div-buttons{
-    width: 100%;
-    bottom: 0;
-    display: flex;
-    padding: 0.5em;
-    position: absolute;
-    flex-direction: row;
-    justify-content: space-between;
+.div-buttons {
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  padding: 0.5em;
+  position: absolute;
+  flex-direction: row;
+  justify-content: space-between;
 }
-.div-buttons > p{
+.div-buttons > p {
+  width: 5em;
+  height: 2em;
+  display: flex;
+  cursor: pointer;
+  font-size: 1rem;
+  align-items: center;
+  color: var(--white);
+  font-weight: bolder;
+  border-radius: 0.7em;
+  justify-content: center;
+  font-family: var(--Roboto);
+  background-color: var(--ligthBlue);
+}
+.div-buttons > p:hover {
+  border: solid 3px var(--green);
+}
+@media screen and (max-width: 800px) {
+  .div-buttons > p {
     width: 5em;
-    height: 2em;
-    display: flex;
-    cursor: pointer;
-    font-size: 1rem;
-    align-items: center;
-    color: var(--white);
-    font-weight: bolder;
-    border-radius: 0.7em;
-    justify-content: center;
-    font-family: var(--Roboto);
-    background-color:  var(--ligthBlue);
+    height: 1.5em;
+    font-size: 0.9rem;
+  }
 }
