--- a/src/Components/Card/card.css
+++ b/src/Components/Card/card.css
@@ -1,118 +1,268 @@
-.card{
-    width: 70%;
-    height: 80%;
-    display: flex;
-    padding: 0.5em;
-    margin-top: 2.2em;
-    position: relative;
-    border-radius: 0.7em;
-    flex-direction: column;
-    background-color: var(--blue);
-    box-shadow:6px 7px 5px -4px rgba(34, 35, 38, 0.13),
-     -6px 7px 25px -5px rgba(40, 38, 39, 0.37);
+.card {
+  width: 70%;
+  height: 80%;
+  display: flex;
+  padding: 0.5em;
+  margin-top: 2.2em;
+  position: relative;
+  align-items: center;
+  border-radius: 0.7em;
+  flex-direction: column;
+  background-color: var(--blue);
+  box-shadow: 6px 7px 5px -4px rgba(34, 35, 38, 0.13),
+    -6px 7px 25px -5px rgba(40, 38, 39, 0.37);
 }
-.card-text{
-    width: 95%;
-    height: 20%;
-    display: flex;
-    margin: 0.2em;
-    padding: 0.5em;
-    align-items: center;
-    border-radius: 0.4em;
-    justify-content: center;
-    background-color: var(--ligthBlue);
+.card-text {
+  width: 95%;
+  height: 20%;
+  margin: 0.2em;
+  display: flex;
+  padding: 0.5em;
+  align-items: center;
+  justify-content: center;
 }
-.card-text > p{
-    cursor: pointer;
-    font-size: 1rem;
-    font-style: normal;
-    text-align: center;
-    white-space: wrap;
-    color: var(--white);
-    font-family: var(--Roboto);
+.card-text > p {
+  width: 80%;
+  height: 3em;
+  display: flex;
+  cursor: pointer;
+  font-size: 1rem;
+  border-radius: 1em;
+  font-style: normal;
+  color: var(--white);
+  align-items: center;
+  justify-content: center;
+  font-family: var(--Roboto);
+  background-color: var(--ligthBlue);
 }
-.card-title{
-    width: 100%;
-    height: 10%;
-    display: flex;
-    position: relative;
-    align-items: center;
-    justify-content: center;
+.card-text > p:hover {
+  border: solid 3px var(--green);
 }
-.card-title > span{
-    cursor: default;
-    font-size: 1.6rem;
-    font-weight: bolder;
-    white-space: nowrap;
-    color: var(--white);
-    font-family: var(--Roboto);
+.card-title {
+  width: 100%;
+  height: 10%;
+  display: flex;
+  margin: 0.5em;
+  align-items: center;
+  justify-content: center;
 }
-.cardQuest{
-    width: 95%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    border-radius: 0.7em;
-    flex-direction: column;
-    justify-content: center;
+.card-title > span {
+  cursor: default;
+  font-size: 1.6rem;
+  font-weight: bolder;
+  white-space: nowrap;
+  color: var(--white);
+  font-family: var(--Roboto);
 }
-.cardQuest > main{
-    width: 80%;
-    height: 30em;
-    padding: 0.3em;
-    font-size: 1rem;
-    cursor: pointer;
-    text-align: justify;
-    color: var(--white);
-    border-radius: 0.7em;
-    margin-bottom: 0.5em;
-    font-family: var(--Roboto);
-    background-color: var(--ligthBlue);
+.cardQuest {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+.cardQuest > main {
+  width: 80%;
+  height: auto;
+  padding: 0.3em;
+  font-size: 1rem;
+  cursor: pointer;
+  margin-top: 10em;
+  border-radius: 1em;
+  text-align: justify;
+  color: var(--white);
+  margin-bottom: 0.5em;
+  font-family: var(--Roboto);
+  background-color: var(--ligthBlue);
+}
+.cardQuest > main:hover {
+  border: 3px solid var(--green);
 }
 .cardQuest > main::-webkit-scrollbar-track-piece {
-    background-color: var(--blue);
-    border-top-right-radius: 0.7em;
-    border-bottom-right-radius: 0.7em;
+  background-color: var(--blue);
+  border-top-right-radius: 0.7em;
+  border-bottom-right-radius: 0.7em;
 }
-.cardQuest > main::-webkit-scrollbar{
-    width: 0.2em;
-    height: 0.2em;
+.cardQuest > main::-webkit-scrollbar {
+  width: 0.2em;
+  height: 0.2em;
 }
 .cardQuest > main::-webkit-scrollbar-thumb {
-    border-radius: 0.2em;
-    background-color: var(--ligthBlue);
+  border-radius: 0.2em;
+  background-color: var(--ligthBlue);
 }
-.cardQuest > p{
-    width: 80%;
+.cardQuest > p {
+  width: 80%;
+  height: auto;
+  padding: 0.5em;
+  cursor: pointer;
+  font-size: 1rem;
+  border-radius: 1em;
+  text-align: justify;
+  color: var(--white);
+  margin-bottom: 0.5em;
+  font-family: var(--Roboto);
+  background-color: var(--ligthBlue);
+}
+.cardQuest > p:hover {
+  border: solid 3px var(--green);
+}
+.card-title-justify {
+  width: 95%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  border-radius: 0.7em;
+  flex-direction: column;
+  justify-content: center;
+}
+.card-title-justify > p {
+  width: 80%;
+  height: 3em;
+  padding: 0.5em;
+  cursor: pointer;
+  font-size: 1rem;
+  text-align: justify;
+  color: var(--white);
+  margin-bottom: 0.5em;
+  border-radius: 0.7em;
+  font-family: var(--Roboto);
+  background-color: var(--ligthBlue);
+}
+.card-title-justify > p:hover {
+  border: solid 3px var(--green);
+}
+@media screen and (max-width: 1300px) {
+  .cardQuest > main {
+    margin-top: 12em;
+  }
+}
+@media screen and (max-width: 1232px) {
+  .cardQuest > main {
+    margin-top: 13em;
+  }
+}
+@media screen and (max-width: 1132px) {
+  .cardQuest > main {
+    margin-top: 17em;
+  }
+}
+@media screen and (max-width: 1025px) {
+  .cardQuest > main {
+    margin-top: 25em;
+  }
+}
+@media screen and (max-width: 800px) {
+  .card {
+    width: 95%;
+    height: 85%;
+  }
+  .card-text > p {
+    width: 100%;
+    font-size: 0.8rem;
+  }
+  .cardQuest > main {
+    width: 90%;
+    margin-top: 4em;
+    font-size: 0.8rem;
+  }
+  .cardQuest > p {
+    width: 90%;
+    font-size: 0.8rem;
+  }
+  .card-title > span {
+    font-size: 1.4rem;
+  }
+  .card-title-justify > p {
+    width: 100%;
+    height: 4em;
+    font-size: 0.8rem;
+  }
+}
+@media screen and (max-width: 320px) {
+  .card-title > span {
+    font-size: 1.2rem;
+  }
+  .card-text > p {
+    width: 100%;
+    font-size: 0.8rem;
+  }
+}
+@media screen and (max-width: 685px) {
+  .cardQuest > main {
+    margin-top: 7em;
+  }
+}
+@media screen and (max-width: 634px) {
+  .cardQuest > main {
+    margin-top: 10em;
+  }
+}
+@media screen and (max-width: 610px) {
+  .cardQuest > main {
+    margin-top: 14em;
+  }
+}
+@media screen and (max-width: 590px) {
+  .cardQuest > main {
+    margin-top: 17em;
+  }
+}
+@media screen and (max-width: 490px) {
+  .cardQuest > main {
+    margin-top: 23em;
+  }
+}
+@media screen and (max-width: 430px) {
+  .cardQuest > main {
+    margin-top: 27em;
+  }
+}
+@media screen and (max-width: 420px) {
+  .cardQuest > main {
+    margin-top: 15em;
+    font-size: 0.6rem;
+  }
+  .cardQuest > p {
+    font-size: 0.6rem;
+  }
+}
+@media screen and (max-width: 380px) {
+  .cardQuest > main {
+    margin-top: 20em;
+    font-size: 0.6rem;
+  }
+  .cardQuest > p {
+    font-size: 0.6rem;
+  }
+}
+@media screen and (max-width: 340px) {
+  .cardQuest > main {
+    margin-top: 25em;
+    font-size: 0.6rem;
+  }
+  .cardQuest > p {
+    font-size: 0.6rem;
+  }
+}
+@media screen and (max-width: 320px) {
+  .cardQuest > main {
+    margin-top: 30em;
+    font-size: 0.6rem;
+  }
+  .cardQuest > p {
+    font-size: 0.6rem;
+  }
+}
+@media screen and (max-width: 290px) {
+  .cardQuest > main {
+    margin-top: 32em;
+    font-size: 0.5rem;
+  }
+  .cardQuest > p {
+    width: 100%;
     height: 5em;
-    padding: 0.5em;
-    cursor: pointer;
-    font-size: 1rem;
-    text-align: justify;
-    color: var(--white);
-    margin-bottom: 0.5em;
-    border-radius: 0.7em;
-    font-family: var(--Roboto);
-    background-color: var(--ligthBlue);
-}
-
-@media screen and (max-width: 800px){
-
-    .card{
-        width: 95%;
-        height: 85%;    
-    }
-
-    .card-text > p{
-        font-size: 0.8rem;
-    }
-    .cardQuest > main{
-        width: 100%;
-        font-size: 0.8rem;
-    }
-    .cardQuest > p{
-        width: 100%;
-        height: 5em;
-        font-size: 0.8rem;
-    }
+    font-size: 0.5rem;
+  }
 }
