--- a/src/Components/Direction/direction.css
+++ b/src/Components/Direction/direction.css
@@ -1,28 +1,30 @@
-.column{
-    width: 100%;
-    height: 80%;
-    display: flex;
-    overflow: auto;
-    padding-top: 5em;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
+.column {
+  width: 100%;
+  height: 75%;
+  display: flex;
+  overflow: auto;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+.padding {
+  padding-top: 5em;
 }
 .column::-webkit-scrollbar-track-piece {
-    background-color: var(--blue);
+  background-color: var(--blue);
 }
-.column::-webkit-scrollbar{
-    width: 0.2em;
-    height: 0.2em;
+.column::-webkit-scrollbar {
+  width: 0.2em;
+  height: 0.2em;
 }
 .column::-webkit-scrollbar-thumb {
-    border-radius: 0.2em;
-    background-color: var(--ligthBlue);
+  border-radius: 0.2em;
+  background-color: var(--ligthBlue);
 }
-.center{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.center {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
