--- a/src/Theme/theme.css
+++ b/src/Theme/theme.css
@@ -1,46 +1,3 @@
-:root{
-    /* Cores de campos, bordas e linhas */
-    --blue:#04ADBF;
-    --grey: #EFEBEB;
-    --white: #FFFFFF;
-    --whiteDark: #F0F0F0;
-    --WhiteGrey: #F3F3F3;
-    --ligthBlue: #6CC1C1;
-    --red: rgb(255, 164, 164);
-    --green: rgb(88, 255, 116);
-
-    /* Fontes */
-    --Roboto: 'Roboto', sans-serif;
-    --Alfa-Slad-One: 'Alfa Slab One', cursive;
-}
-::-webkit-scrollbar-track-piece {
-    /* Barra progresso */
-    background-color: var(--color_04);
-}
-::-moz-scrollbar-track-piece {
-    /* Barra progresso */
-    background-color: var(--color_04);
-}
-::-webkit-scrollbar{
-    /* Barra de rolagem */
-    width: 0.2em;
-    height: 0.2em;
-}
-::-moz-scrollbar{
-    /* Barra de rolagem */
-    width: 0.2em;
-    height: 0.2em;
-}
-::-webkit-scrollbar-thumb {
-    /* Alça da barra de rolagem */
-    border-radius: 0.2em;
-    background-color: var(--color_03);
-}
-::-moz-scrollbar-thumb {
-    /* Alça da barra de rolagem */
-    border-radius: 0.2em;
-    background-color: var(--color_03);
-}
 *{
     margin: 0;
     border: 0;
@@ -52,6 +9,21 @@
     font-size: 1.4rem;
     text-decoration: none;
     box-sizing: border-box;
+}
+:root{
+    /* Cores de campos, bordas e linhas */
+    --blue:#04ADBF;
+    --grey: #EFEBEB;
+    --white: #FFFFFF;
+    --green: #9DF4CE;
+    --whiteDark: #F0F0F0;
+    --WhiteGrey: #F3F3F3;
+    --ligthBlue: #6CC1C1;
+    --red: rgb(255, 164, 164);
+
+    /* Fontes */
+    --Roboto: 'Roboto', sans-serif;
+    --Alfa-Slad-One: 'Alfa Slab One', cursive;
 }
 #root{
     width: 100vw;
